--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,11 +3,14 @@
     margin:0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
 
 /* shared styles */
 body{
     color:black;
     font-size: 14px;
+    font-family: "Poppins", sans-serif;
 }
 
 img{
@@ -23,7 +26,7 @@ img{
     font-size:14px;
     background-color:#FF42A5;
     color:#ffffff;
-    padding:8px 10px;
+    padding:10px 22px;
     border-radius: 15px;
     border:none;
     margin:5px;
@@ -33,14 +36,21 @@ img{
     font-size:14px;
     background-color:#4EC5F5;
     color:#ffffff;
-    padding:8px 10px;
+    padding:10px 18px;
     border-radius: 15px;
     border:none;
     margin:5px;
 }
+h2{
+    font-size: 27px;
+    font-weight:800;
+}
 
+h4{
+    padding:5px 0;
+}
 .texts{
-    line-height:1;
+    line-height:1.2;
     padding:15px 0;
 }
 
@@ -52,6 +62,7 @@ img{
 
 /* section wise styles */
 
+/* Header Section */
 .header{
     padding: 10px 0;
 }
@@ -200,11 +211,13 @@ object-fit: cover;
 
 .btn-career{
     color:#FF42A5;
+    font-size:20px;
+    font-weight:500;
     background-color: white;
     border:none;
     border-radius: 20px;
-    padding:5px 15px;
-    margin:20px;
+    padding:10px 40px;
+    margin:30px auto 20px 0;
 }
 .locations{
     text-align: right;
@@ -215,7 +228,7 @@ object-fit: cover;
     width:80%;
     margin:0 auto;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding:50px 0;
 }
 
@@ -223,9 +236,9 @@ object-fit: cover;
     flex-wrap: nowrap;
     gap:0%;
     height:25px;
-    border:2px solid none;
+    border:10px solid none;
     border-radius: 20px;
-    margin:10px;
+    margin:10px 20px;
 
 }
 
